--- a/source/web/index.html
+++ b/source/web/index.html
@@ -1,11 +1,9 @@
 <!doctype html>
 <html lang="pt-br">
-
 <head>
   <meta charset="utf-8">
-  <title>Papp</title>
+  <title></title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#3f51b5">
   <link rel="manifest" href="manifest.json">
