AP-12 barra do pwa respondendo pelo manisfest

--- a/source/web/index.html
+++ b/source/web/index.html
@@ -5,8 +5,8 @@
   <title></title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#3f51b5">
   <link rel="manifest" href="web/assets/visual-identity/manifest.json">
+  <meta name="theme-color" content="">
   <link rel="icon" type="image/x-icon" href="web/assets/visual-identity/img/favicon.ico">
   <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
   <style>
@@ -128,8 +128,6 @@
       }
     }
   </style>
-  <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#1976d2">
 </head>
 
 <body>
@@ -139,8 +137,7 @@
     </h3>
   </noscript>
   <app-root>
-    <nav style="background-color:#3f51b5; height: 56px; width: 100%">
-    </nav>
+    <nav style="background-color:#3f51b5; height: 56px; width: 100%"></nav>
     <div class="contentChart">
       <svg class="spinner" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
         <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
