hotfix-AP-18 ajuste especial global para iphone via media query

--- a/source/web/index.html
+++ b/source/web/index.html
@@ -11,7 +11,7 @@
   <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 
-<body>
+<body class="body-layout">
   <noscript>
     <h3 style="color: #673ab7; font-family: Helvetica; margin: 2rem;">
       Aplicativo indisponível sem javascript.
